@@ -13,6 +13,7 @@
    * ParseID3v1: Parse short (< 128 byte) tags generated by old Mutagen
      implementations of MakeID3v1, and tags with garbage on the front.
    * pprint: Sort frames by name.
+   * Upgrade unknown 2.3 frames (#97, Christoph Reiter)
  * MP3: Fix error when loading extremely small MP3s. (#72)
  * Use 'open' rather than 'file' everywhere. (#74, Dan Callahan)
  * mid3iconv:
